Fixed chat screen overflow

--- a/client/src/css/chatStyles/chatpanel.css
+++ b/client/src/css/chatStyles/chatpanel.css
@@ -1,7 +1,7 @@
 .chat-panel {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     background-color: transparent; 
     position: relative;
 }
